# career_dreamer

./: .gitignore  README.md  app.py  pyproject.toml  quickstart.py  requirements.txt  vdab_api_service.py
docs/: sanity_check.sh  vdab_api_audit.md
src/: data_service.py  schemas.py
tests/: test_data.py  test_vdab.py
