[project]
name = "career-dreamer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fsspec>=2025.10.0",
    "huggingface-hub>=1.7.2",
    "polars>=1.36.1",
    "pyarrow>=21.0.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
